--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=task-manager
 spring.datasource.url=jdbc:mysql://localhost:3306/task_manager?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=****
+spring.datasource.password=Qwer24
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect.format_sql = true
 spring.jpa.hibernate.ddl-auto=update
