--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=task-manager
+server.servlet.context-path=/api/v1/task-manager
 spring.datasource.url=jdbc:mysql://localhost:3306/task_manager?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Qwer24
